deleted identicalBags, investigate, and validate functions

--- a/inst/templates/dl_report.qmd
+++ b/inst/templates/dl_report.qmd
@@ -328,77 +328,6 @@ if(is.null(stratacheck_tbl)) {
     )
 }
 
-# All horizontal validation
-all_h_valid <- migbirdHIP::validate(final_data, type = "horizontal", all = T) 
-
-# Horizontal repetition for 100% of file
-all_h_valid_100 <- all_h_valid |> dplyr::filter(prop_repeat == 1)
-
-# Vertical repetition
-vrep_all <- migbirdHIP::validate(final_data, type = "vertical", all = T) 
-
-# Vertical repetition filtered
-vrep_100 <-
-  vrep_all |> 
-  dplyr::filter(v_repeated >= 100) |> 
-  # Filter out expected vertical repetition for bag values that are wrong, 
-  # e.g. received 1s for no-season instead of 0s, etc; this already shows 
-  # up in the stratacheck section and clutters the data summary here
-  dplyr::left_join(
-    migbirdHIP:::hip_bags_ref |>
-      dplyr::select(-FWSstratum) |>
-      dplyr::group_by(state, spp) |>
-      dplyr::filter(dplyr::n() == 1) |>
-      dplyr::ungroup() |>
-      dplyr::rename(
-        dl_state = state,
-        repeated_value = stateBagValue) |>
-      dplyr::mutate(
-        repeated_value = as.character(repeated_value)) |>
-      # Join in state/species combinations that are supposed to be
-      # all 0s because we receive those bag values in another format
-      dplyr::bind_rows(
-        migbirdHIP:::pmt_files |> 
-          dplyr::rename(repeated_value = value)) |>
-      dplyr::distinct() |>
-      dplyr::select(-repeated_value) |> 
-      dplyr::mutate(flag = "no season"),
-    by = c("dl_state", "spp")
-    ) |> 
-  dplyr::filter(is.na(flag)) |> 
-  dplyr::select(-flag)
-
-# Identical bags
-identicalbags <- migbirdHIP::identicalBags(final_data) 
-
-if(!is.null(identicalbags)) {
-  idb_filtered <-
-    identicalbags |> 
-    dplyr::filter(n > 100 & stringr::str_detect(value, ","))
-} else {
-  idb_filtered <- identicalbags
-}
-
-if(!is.null(idb_filtered)) {
-  if(nrow(idb_filtered) > 0) {
-    idb2 <-
-      idb_filtered |> 
-      dplyr::group_by(dl_state, spp1, spp2, value) |> 
-      dplyr::reframe(
-        files = length(unique(source_file)),
-        n = sum(n)) |> 
-      dplyr::mutate(
-        files = 
-          ifelse(files == 1, "1 file", paste0(files, " files")))
-  } else {
-    idb2 <- NULL
-    }
-} else {
-  idb2 <- idb_filtered
-}
-
-idb_filtered <- NULL
-
 # Vector of source files
 file_list <- 
   list.files(
@@ -832,157 +761,10 @@ stratacheck_tbl_non0 <- NULL
 
 :::
 
-## Repeated and identical bag values
+## Issue dates
 
 ```{r agenda_details_2}
-#| echo: false
-#| output: asis
 
-cat("### Identical bag columns")
-cat("\n\n")
-if(!is.null(idb2)) {
-  if(nrow(idb2) > 0) {
-    cat(
-      paste0(
-        "❌", 
-        " Indentical columns detected that contain more than 1 bag value in file(s) with more than 100 rows."))
-    cat("\n\n")
-    if(nrow(idb2) == 1) { 
-      cat(
-        paste0(
-          "* ", idb2$dl_state, " reported identical ", 
-          idb2$spp1, " and ", idb2$spp2, 
-          " (n = ", idb2$n, 
-          ", value(s) = ", idb2$value, ").")
-      )
-    } else if (nrow(idb2) > 1) { 
-        idb2_split <- split(idb2, idb2$dl_state)
-            
-        writeLines(
-          unlist(
-            purrr::map(
-              1:length(idb2_split),
-              function(x) {
-                list(
-                  paste0("* ", names(idb2_split[x]), " (", 
-                   unique(idb2_split[[x]]$files), ")"),
-                  purrr::map(
-                    1:nrow(idb2_split[[x]]),
-                    function(y) {
-                      paste0(
-                        "    + ", 
-                        idb2_split[[x]]$spp1[y], " and ", 
-                        idb2_split[[x]]$spp2[y], 
-                        " (records = ", idb2_split[[x]]$n[y], 
-                        ", value(s) = ", idb2_split[[x]]$value[y], ")")
-                    }
-                  )
-                )
-              }
-            )
-          )
-        )
-    }
-  }
-} else {
-  cat(paste0("✔️", " No identical bag columns were found in files with more than 100 rows, with more than 1 bag value in common."))
-}
-
-cat("\n\n")
-cat("### Horizontal repetition")
-cat("\n\n")
-if(nrow(all_h_valid_100) > 0) {
-  if(nrow(all_h_valid_100) == 1) {
-    all_h_valid_var <- " file."
-  } else if (nrow(all_h_valid_100) > 1) {
-    all_h_valid_var <- " files."
-  }
-  cat(
-    paste0(
-      "❌", 
-      " Horizontal repetition was found in 100% of ", 
-      nrow(all_h_valid_100 |> dplyr::filter(prop_repeat == 1)), 
-      all_h_valid_var))
-  cat("\n\n")
-  writeLines( 
-    unlist(
-      purrr::map(
-        1:nrow(all_h_valid_100),
-          ~paste0(
-            "* ", all_h_valid_100$source_file[.x], " reported a value of ", 
-            all_h_valid_100$h_value[.x], " across all bag fields for ", 
-            all_h_valid_100$h_rep[.x], " records.")
-      )
-    )
-  )  
-} else {
-  cat(paste0("✔️", " No horizontal repetition was found to cover 100% of a file."))
-}
-
-cat("\n\n")
-cat("### Vertical repetition")
-cat("\n\n")
-if(nrow(vrep_100) > 0) { 
-  cat(
-    paste0(
-      "❌", 
-      " Vertical repetition was detected in file(s) with more than 100 rows. See Strata tab."))
-  # cat("\n\n")
-  # if(nrow(vrep_100) == 1) {
-  # cat(
-  #   paste0(
-  #     "* ", vrep_100$source_file,
-  #     " repeated ", vrep_100$repeated_value, 
-  #     " for ", 
-  #     vrep_100$spp,
-  #     "(n = ", unique(vrep_100$v_repeated), 
-  #     " records).")
-  #   )
-  # } else if(nrow(vrep_100) > 1) {
-  #   vrep_100_split <- 
-  #     split(vrep_100, vrep_100$source_file) |>
-  #     setNames(
-  #       vrep_100 |> 
-  #         dplyr::distinct(source_file, v_repeated) |> 
-  #         dplyr::pull(v_repeated))
-  #   
-  #   vrep_100_split <- 
-  #     vrep_100_split[
-  #       as.character(sort(as.numeric(names(vrep_100_split)), decreasing = T))]
-  #   
-  #   writeLines(
-  #     unlist(
-  #       purrr::map(
-  #         1:length(vrep_100_split),
-  #         function(x) {
-  #           list(
-  #             paste(
-  #               "*",
-  #               unique(vrep_100_split[[x]]$source_file),
-  #               "(n =", unique(vrep_100_split[[x]]$v_repeated), 
-  #               "records)", sep = " "),
-  #             purrr::map(
-  #               1:nrow(vrep_100_split[[x]]),
-  #               function(y) {
-  #                 paste0(
-  #                   "    + ", vrep_100_split[[x]]$repeated_value[y], 
-  #                   " for ", 
-  #                   vrep_100_split[[x]]$spp[y])
-  #               }
-  #             )
-  #           )
-  #         }
-  #       )
-  #     )
-  #   )
-  # }
-} else { 
-  cat(paste0("✔️", " No vertical repetition detected."))
-}
-
-cat("\n\n")
-cat("## Issue dates")
-cat("\n\n")
 if(nrow(bad_issue) > 0) {
   cat(paste0("❌", " Incorrectly formatted issue dates detected."))
   cat("\n\n")
@@ -1500,84 +1282,6 @@ if(!is.null(stratacheck_tbl)) {
 }
 
 stratacheck_tbl <- NULL
-```
-
-## Identical values
-
-The table below shows files that contained identical columns for any combination of species fields in the final data. Identical columns detected for species without a season in a state are ignored. The `Count` field indicates the number of records that the file contained, and the `Value` field contains the value(s) that is/are the same between `Species 1` and `Species 2`.
-
-```{r identical_bags}
-#| echo: false
-
-if(!is.null(identicalbags)) {
-  DT::datatable(
-    identicalbags |>
-      dplyr::select(-dl_state) |> 
-      dplyr::arrange(dplyr::desc(n)) |> 
-      dplyr::rename(
-        `Source file` = source_file,
-        `Species 1` = spp1,
-        `Species 2` = spp2,
-        Count = n,
-        Value = value)
-  )
-} else {
-  cat("✔️ No identical columns detected!")
-}
-
-identicalbags <- NULL
-```
-
-## Repeated values
-
-### Horizontally repeated values across all bag fields
-
-The table below shows how many records have horizontal repetition across ALL bag columns.
-
-```{r h_validate}
-#| echo: false
-
-if(!is.null(all_h_valid)) {
-  DT::datatable(
-    all_h_valid |> 
-    dplyr::mutate(prop_repeat = round(prop_repeat, digits = 2)) |> 
-    dplyr::rename(
-      `Source file` = source_file,
-      Value = h_value,
-      `Records repeated` = h_rep,
-      `Total records` = h_total,
-      `Proportion repeated` = prop_repeat)
-  )
-} else {
-  cat("✔️ No horizontal repetition detected!")
-}
-
-all_h_valid <- NULL
-```
-
-### Vertically repeated values
-
-The table below contains files with values repeated for 100% of any bag column. States without a season for a species are not included (e.g. MT does not have a seaducks season, so we expect 100% 0s for seaducks). The `Species` field indicates the species with vertically repeated values, the `Repetitions` field is the number of records, and the `Repeated value` field indicates what value was repeated.
-
-```{r v_validate}
-#| echo: false
-
-if(!is.null(vrep_all)) {
-  DT::datatable(
-    vrep_all |> 
-      dplyr::select(-dl_state) |> 
-      dplyr::arrange(dplyr::desc(v_repeated)) |> 
-      dplyr::rename(
-        `Source file` = source_file,
-        `Species` = spp,
-        `Repetitions` = v_repeated,
-        `Repeated value` = repeated_value)
-    )
-} else { 
-  cat("✔️ No vertical repetition detected!")
-}
-
-vrep_all <- NULL
 ```
 
 # Issuance
