redFlags function: no longer exported

--- a/README.Rmd
+++ b/README.Rmd
@@ -33,7 +33,7 @@ Tasks that can be accomplished with this package include:
 * `proof` checks values for errors
 * `correct` systematically fixes erroneous values
 * Error visualization with `errorPlot_dl`, `errorPlot_fields`, and `errorPlot_states`
-* Detailed error reporting with `errorTable`, `pullErrors`, and `redFlags`
+* Detailed error table reporting with `errorTable` and `pullErrors`
 * Automated report writing with `writeReport` 
 * Custom .csv writing with `write_hip`
 
