--- a/README.Rmd
+++ b/README.Rmd
@@ -52,10 +52,10 @@ devtools::install_github("USFWS/migbirdHIP@v1.2.8", build_vignettes = T)
 ```
 
 * dev - 2025-2026
-* [v1.3.0](https://github.com/USFWS/migbirdHIP/releases/tag/v1.3.0) - 2024-2025
-* [v1.2.8](https://github.com/USFWS/migbirdHIP/releases/tag/v1.2.8) - 2023-2024
-* [v1.2.7](https://github.com/USFWS/migbirdHIP/releases/tag/v1.2.7) - 2022-2023
-* [v1.2.4](https://github.com/USFWS/migbirdHIP/releases/tag/v1.2.4) - 2021-2022 
+* [v1.3.0](https://github.com/USFWS/migbirdHIP/releases/tag/v1.3.0) - `r names(migbirdHIP:::REF_RELEASES[migbirdHIP:::REF_RELEASES == "1.3.0"])`
+* [v1.2.8](https://github.com/USFWS/migbirdHIP/releases/tag/v1.2.8) - `r names(migbirdHIP:::REF_RELEASES[migbirdHIP:::REF_RELEASES == "1.2.8"])`
+* [v1.2.7](https://github.com/USFWS/migbirdHIP/releases/tag/v1.2.7) - `r names(migbirdHIP:::REF_RELEASES[migbirdHIP:::REF_RELEASES == "1.2.7"])`
+* [v1.2.4](https://github.com/USFWS/migbirdHIP/releases/tag/v1.2.4) - `r names(migbirdHIP:::REF_RELEASES[migbirdHIP:::REF_RELEASES == "1.2.4"])`
 
 
 ## Vignette
